--- a/views/Home/song/songResponsive/topPart.ejs
+++ b/views/Home/song/songResponsive/topPart.ejs
@@ -12,7 +12,8 @@
           class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-emerald-600 peer-focus:dark:text-emerald-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Search</label>
       </div>
     </form>
-    <a href="" class="h-10 w-10 flex items-center justify-center bg-emerald-800 border border-transparent rounded-full">
+    <a href="/profile"
+      class="h-10 w-10 flex items-center justify-center bg-emerald-800 border border-transparent rounded-full">
       <%= username.charAt(0).toUpperCase() %>
     </a>
   </div>
