--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Khatabook - Error</title>
+  <title>Music - Error</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -24,7 +24,7 @@
 </style>
 
 <body class="relative">
-  <h1 class="absolute text-xl px-8 py-6">Khatabook</h1>
+  <h1 class="absolute text-xl px-8 py-6">Music</h1>
   <div class="text-center h-full flex flex-col items-center justify-center">
     <img class="mb-8" src="https://i.postimg.cc/2yrFyxKv/giphy.gif" alt="gif_ing" />
     <!-- Error Title -->
