playlist and poster create, delete, edit all done with responsive

--- a/views/Home/menu/menuResponsive/plus1000.ejs
+++ b/views/Home/menu/menuResponsive/plus1000.ejs
@@ -95,4 +95,8 @@
       </div>
     </div>
   </div>
+  <div class="text-white text-sm">
+    <a href="/logout"
+      class="text-white text-sm cursor-pointer tracking-[0.15rem] font-mono uppercase font-semibold px-5 py-2 bg-[#065F46]">Logout</a>
+  </div>
 </div>
