--- a/views/Home/song/song.ejs
+++ b/views/Home/song/song.ejs
@@ -1,5 +1,5 @@
 <div
-  class="songs hide-songs w-full h-full p-10 pr-16 pt-6 relative flex flex-col gap-6 max-[1260px]:px-6 max-[660px]:px-3 max-[560px]:py-4 max-[560px]:gap-0">
+  class="songs hide-songs w-full h-full p-10 pr-16 pt-6 relative flex flex-col gap-6 [@media(min-width:560px)_and_(max-width:1000px)]:h-[95vh] max-[1000px]:pt-3 max-[1260px]:px-6 max-[660px]:px-3 max-[560px]:py-4 max-[560px]:gap-0 max-[340px]:h-[92vh]">
 
   <!-- top-part username and profile -->
   <%- include("./songResponsive/topPart.ejs") %>
