--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,9 +52,12 @@
           account</a>
       </div>
     </div>
-    <div class=" w-[80%] h-[60%] bg-yellow-600 absolute top-0 -right-[450px] rotate-[75deg] max-[1150px]:hidden"></div>
     <div
-      class=" w-[80%] h-[60%] bg-purple-600 absolute -right-52 -bottom-52 rotate-[-25deg] max-[1150px]:hidden max-[1350px]:rotate-[-30deg]">
+      class="w-[80%] h-[60%] absolute -top-10 bg-[url('/images/menu.webp')] -right-[450px] -rotate-[110deg] max-[1150px]:hidden">
+    </div>
+    <div
+      class=" w-[80%] h-[60%] absolute -right-52 -bottom-52 rotate-[-25deg] max-[1150px]:hidden max-[1350px]:rotate-[-30deg]">
+      <img class="w-full h-full object-cover" src="/images/home.webp" alt="">
     </div>
     <div class="img-box h-[650px] w-[650px] rounded-full border border-transparent absolute -top-28 -left-64"></div>
   </div>
