--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
   <form action="/login" method="post" class="w-96 max-[400px]:w-80 max-[330px]:w-72 max-[300px]:w-52"
     autocomplete="off">
     <div class="relative z-0 w-full mb-5 group">
-      <input type="email" name="email" id="floating_email" autocomplete="off"
+      <input type="email" name="email" id="floating_email" autofocus autocomplete="off"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-emerald-500 focus:outline-none focus:ring-0 focus:border-emerald-600 peer"
         placeholder=" " required />
       <label for="floating_email"
