--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -574,6 +574,10 @@ video {
   bottom: -13rem;
 }
 
+.-left-5 {
+  left: -1.25rem;
+}
+
 .-left-64 {
   left: -16rem;
 }
@@ -588,6 +592,10 @@ video {
 
 .-right-\[450px\] {
   right: -450px;
+}
+
+.-top-10 {
+  top: -2.5rem;
 }
 
 .-top-28 {
@@ -667,14 +675,17 @@ video {
   margin-right: 2rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.my-9 {
+  margin-top: 2.25rem;
+  margin-bottom: 2.25rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mb-5 {
@@ -687,6 +698,10 @@ video {
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .mt-1 {
@@ -741,6 +756,10 @@ video {
   height: 3rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -761,8 +780,20 @@ video {
   height: 1.75rem;
 }
 
+.h-\[1\.2px\] {
+  height: 1.2px;
+}
+
 .h-\[2px\] {
   height: 2px;
+}
+
+.h-\[35\%\] {
+  height: 35%;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .h-\[60\%\] {
@@ -775,6 +806,10 @@ video {
 
 .h-\[80\%\] {
   height: 80%;
+}
+
+.h-\[90\%\] {
+  height: 90%;
 }
 
 .h-\[95vh\] {
@@ -790,8 +825,17 @@ video {
   height: 100%;
 }
 
+.h-max {
+  height: -moz-max-content;
+  height: max-content;
+}
+
 .h-screen {
   height: 100vh;
+}
+
+.h-\[90vh\] {
+  height: 90vh;
 }
 
 .min-h-screen {
@@ -818,12 +862,20 @@ video {
   width: 5rem;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
 .w-3\/4 {
   width: 75%;
 }
 
 .w-32 {
   width: 8rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .w-60 {
@@ -838,12 +890,20 @@ video {
   width: 100px;
 }
 
+.w-\[2px\] {
+  width: 2px;
+}
+
 .w-\[40\%\] {
   width: 40%;
 }
 
 .w-\[400px\] {
   width: 400px;
+}
+
+.w-\[465px\] {
+  width: 465px;
 }
 
 .w-\[55\%\] {
@@ -871,10 +931,6 @@ video {
   min-width: 100%;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
-}
-
 .max-w-5xl {
   max-width: 64rem;
 }
@@ -900,6 +956,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-rotate-45 {
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-rotate-\[110deg\] {
+  --tw-rotate: -110deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-90 {
   --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -907,11 +973,6 @@ video {
 
 .rotate-\[-25deg\] {
   --tw-rotate: -25deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-\[75deg\] {
-  --tw-rotate: 75deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -947,6 +1008,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
@@ -989,6 +1054,10 @@ video {
   gap: 1rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1026,10 +1095,6 @@ video {
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 
-.overflow-auto {
-  overflow: auto;
-}
-
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1042,6 +1107,10 @@ video {
   overflow-y: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1052,6 +1121,10 @@ video {
 
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.text-wrap {
+  text-wrap: wrap;
 }
 
 .text-nowrap {
@@ -1113,6 +1186,16 @@ video {
   border-color: transparent;
 }
 
+.bg-\[\#040404\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 4 4 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#04110C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 17 12 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#101010\] {
   --tw-bg-opacity: 1;
   background-color: rgb(16 16 16 / var(--tw-bg-opacity));
@@ -1146,8 +1229,18 @@ video {
   background-color: rgb(110 231 183 / 0.05);
 }
 
+.bg-emerald-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
+}
+
 .bg-emerald-600\/20 {
   background-color: rgb(5 150 105 / 0.2);
+}
+
+.bg-emerald-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 120 87 / var(--tw-bg-opacity));
 }
 
 .bg-emerald-800 {
@@ -1158,6 +1251,10 @@ video {
 .bg-emerald-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(6 78 59 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-900\/50 {
+  background-color: rgb(6 78 59 / 0.5);
 }
 
 .bg-emerald-950 {
@@ -1190,11 +1287,6 @@ video {
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 
-.bg-purple-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1214,17 +1306,41 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
-}
-
 .bg-zinc-400\/10 {
   background-color: rgb(161 161 170 / 0.1);
 }
 
-.bg-zinc-400\/20 {
-  background-color: rgb(161 161 170 / 0.2);
+.bg-emerald-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#065F46\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 95 70 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\'\/images\/menu\.png\'\)\] {
+  background-image: url('/images/menu.png');
+}
+
+.bg-\[url\(\'\/images\/menu\.webp\'\)\] {
+  background-image: url('/images/menu.webp');
 }
 
 .object-cover {
@@ -1450,6 +1566,10 @@ video {
   text-transform: uppercase;
 }
 
+.capitalize {
+  text-transform: capitalize;
+}
+
 .tracking-\[0\.15rem\] {
   letter-spacing: 0.15rem;
 }
@@ -1481,11 +1601,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-blue-500 {
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
 .text-emerald-100 {
   --tw-text-opacity: 1;
   color: rgb(209 250 229 / var(--tw-text-opacity));
@@ -1501,10 +1616,6 @@ video {
   color: rgb(16 185 129 / var(--tw-text-opacity));
 }
 
-.text-emerald-500\/70 {
-  color: rgb(16 185 129 / 0.7);
-}
-
 .text-emerald-900 {
   --tw-text-opacity: 1;
   color: rgb(6 78 59 / var(--tw-text-opacity));
@@ -1513,6 +1624,11 @@ video {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1545,6 +1661,11 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1558,13 +1679,19 @@ video {
   color: rgb(255 255 255 / 0.6);
 }
 
-.text-white\/70 {
-  color: rgb(255 255 255 / 0.7);
+.text-zinc-300 {
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
 .text-zinc-400 {
   --tw-text-opacity: 1;
   color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-purple-500 {
+  --tw-text-opacity: 1;
+  color: rgb(168 85 247 / var(--tw-text-opacity));
 }
 
 .shadow {
@@ -1604,6 +1731,11 @@ video {
 
 .blur {
   --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.blur-md {
+  --tw-blur: blur(12px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1712,6 +1844,11 @@ video {
 .hover\:text-emerald-500:hover {
   --tw-text-opacity: 1;
   color: rgb(16 185 129 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-200:hover {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .hover\:transition-all:hover {
@@ -1830,6 +1967,24 @@ video {
   }
 }
 
+@media (max-width: 1130px) {
+  .max-\[1130px\]\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .max-\[1130px\]\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+}
+
+@media (max-width: 1020px) {
+  .max-\[1020px\]\:gap-12 {
+    gap: 3rem;
+  }
+}
+
 @media (max-width: 1000px) {
   .max-\[1000px\]\:absolute {
     position: absolute;
@@ -1904,6 +2059,10 @@ video {
     padding: 1.5rem;
   }
 
+  .max-\[1000px\]\:pt-3 {
+    padding-top: 0.75rem;
+  }
+
   .max-\[1000px\]\:text-right {
     text-align: right;
   }
@@ -1919,6 +2078,28 @@ video {
   }
 }
 
+@media (max-width: 900px) {
+  .max-\[900px\]\:gap-4 {
+    gap: 1rem;
+  }
+
+  .max-\[900px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-\[900px\]\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (max-width: 820px) {
+  .max-\[820px\]\:justify-center {
+    justify-content: center;
+  }
+}
+
 @media (max-width: 750px) {
   .max-\[750px\]\:hidden {
     display: none;
@@ -1926,6 +2107,12 @@ video {
 
   .max-\[750px\]\:max-w-\[140px\] {
     max-width: 140px;
+  }
+}
+
+@media (max-width: 700px) {
+  .max-\[700px\]\:hidden {
+    display: none;
   }
 }
 
@@ -1937,6 +2124,25 @@ video {
   .max-\[660px\]\:px-3 {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
+  }
+}
+
+@media (max-width: 650px) {
+  .max-\[650px\]\:h-24 {
+    height: 6rem;
+  }
+
+  .max-\[650px\]\:w-24 {
+    width: 6rem;
+  }
+
+  .max-\[650px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[650px\]\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -1971,25 +2177,290 @@ video {
   }
 }
 
+@media (max-width: 530px) {
+  .max-\[530px\]\:my-5 {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .max-\[530px\]\:mb-1 {
+    margin-bottom: 0.25rem;
+  }
+
+  .max-\[530px\]\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .max-\[530px\]\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .max-\[530px\]\:block {
+    display: block;
+  }
+
+  .max-\[530px\]\:h-28 {
+    height: 7rem;
+  }
+
+  .max-\[530px\]\:w-32 {
+    width: 8rem;
+  }
+
+  .max-\[530px\]\:w-\[328px\] {
+    width: 328px;
+  }
+
+  .max-\[530px\]\:gap-1 {
+    gap: 0.25rem;
+  }
+
+  .max-\[530px\]\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .max-\[530px\]\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .max-\[530px\]\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .max-\[530px\]\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .max-\[530px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-\[530px\]\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (max-width: 515px) {
+  .max-\[515px\]\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .max-\[515px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[515px\]\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .max-\[515px\]\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .max-\[515px\]\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media (max-width: 510px) {
+  .max-\[510px\]\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .max-\[510px\]\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .max-\[510px\]\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
 @media (max-width: 500px) {
   .max-\[500px\]\:flex-col {
     flex-direction: column;
   }
+
+  .max-\[500px\]\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .max-\[500px\]\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .max-\[500px\]\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
 
 @media (max-width: 400px) {
+  .max-\[400px\]\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .max-\[400px\]\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
+  .max-\[400px\]\:block {
+    display: block;
+  }
+
+  .max-\[400px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[400px\]\:h-\[66px\] {
+    height: 66px;
+  }
+
+  .max-\[400px\]\:w-20 {
+    width: 5rem;
+  }
+
   .max-\[400px\]\:w-80 {
     width: 20rem;
   }
 
+  .max-\[400px\]\:w-\[245px\] {
+    width: 245px;
+  }
+
   .max-\[400px\]\:max-w-\[200px\] {
     max-width: 200px;
+  }
+
+  .max-\[400px\]\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-\[400px\]\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
+
+  .max-\[400px\]\:justify-normal {
+    justify-content: normal;
+  }
+
+  .max-\[400px\]\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .max-\[400px\]\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .max-\[400px\]\:self-start {
+    align-self: flex-start;
+  }
+
+  .max-\[400px\]\:self-end {
+    align-self: flex-end;
+  }
+
+  .max-\[400px\]\:rounded {
+    border-radius: 0.25rem;
+  }
+
+  .max-\[400px\]\:p-4 {
+    padding: 1rem;
+  }
+
+  .max-\[400px\]\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .max-\[400px\]\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .max-\[400px\]\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .max-\[400px\]\:text-left {
+    text-align: left;
+  }
+
+  .max-\[400px\]\:text-right {
+    text-align: right;
+  }
+
+  .max-\[400px\]\:text-\[9px\] {
+    font-size: 9px;
+  }
+
+  .max-\[400px\]\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .max-\[400px\]\:font-normal {
+    font-weight: 400;
+  }
+
+  .max-\[400px\]\:font-semibold {
+    font-weight: 600;
+  }
+
+  .max-\[400px\]\:tracking-\[0\.9px\] {
+    letter-spacing: 0.9px;
   }
 }
 
 @media (max-width: 340px) {
   .max-\[340px\]\:h-10 {
     height: 2.5rem;
+  }
+
+  .max-\[340px\]\:h-9 {
+    height: 2.25rem;
+  }
+
+  .max-\[340px\]\:h-11 {
+    height: 2.75rem;
+  }
+
+  .max-\[340px\]\:h-8 {
+    height: 2rem;
+  }
+
+  .max-\[340px\]\:h-\[90vh\] {
+    height: 90vh;
+  }
+
+  .max-\[340px\]\:h-\[95vh\] {
+    height: 95vh;
+  }
+
+  .max-\[340px\]\:h-\[91vh\] {
+    height: 91vh;
+  }
+
+  .max-\[340px\]\:h-\[90\.5vh\] {
+    height: 90.5vh;
+  }
+
+  .max-\[340px\]\:h-\[92vh\] {
+    height: 92vh;
   }
 
   .max-\[340px\]\:w-10 {
@@ -2024,6 +2495,12 @@ video {
 @media (max-width: 300px) {
   .max-\[300px\]\:w-52 {
     width: 13rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .min-\[400px\]\:block {
+    display: block;
   }
 }
 
@@ -2067,5 +2544,64 @@ video {
   .peer:focus ~ .peer-focus\:dark\:text-emerald-500 {
     --tw-text-opacity: 1;
     color: rgb(16 185 129 / var(--tw-text-opacity));
+  }
+}
+
+@media(min-width:560px) and (max-width:1000px) {
+  .\[\@media\(min-width\:560px\)_and_\(max-width\:1000px\)\]\:h-\[90vh\] {
+    height: 90vh;
+  }
+
+  .\[\@media\(min-width\:560px\)_and_\(max-width\:1000px\)\]\:h-\[95vh\] {
+    height: 95vh;
+  }
+}
+
+@media(min-width:820px) and (max-width:1020px) {
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:1020px\)\]\:my-5 {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:1020px\)\]\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:1020px\)\]\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:1020px\)\]\:p-4 {
+    padding: 1rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:1020px\)\]\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+}
+
+@media(min-width:820px) and (max-width:940px) {
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:940px\)\]\:h-32 {
+    height: 8rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:940px\)\]\:w-36 {
+    width: 9rem;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:940px\)\]\:w-\[380px\] {
+    width: 380px;
+  }
+
+  .\[\@media\(min-width\:820px\)_and_\(max-width\:940px\)\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media(min-width:940px) and (max-width:1020px) {
+  .\[\@media\(min-width\:940px\)_and_\(max-width\:1020px\)\]\:w-\[440px\] {
+    width: 440px;
   }
 }
