--- a/views/Home/menu/menuResponsive/minus1000.ejs
+++ b/views/Home/menu/menuResponsive/minus1000.ejs
@@ -103,5 +103,9 @@
         </div>
       </div>
     </div>
+    <div class="text-white max-[1000px]:flex-row max-[1000px]:items-center max-[1000px]:justify-between">
+      <a href="/logout"
+        class="text-white text-sm cursor-pointer tracking-[0.15rem] font-mono uppercase font-semibold px-5 py-2 bg-[#065F46]">Logout</a>
+    </div>
   </div>
 </div>
